--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
     <header>
         <title>My Site!</title>
+        <style>
+            h1 {
+                color: blue;
+                text-align: center;
+            }
+        </style>
     </header>
     <body>
         <h1>This is my Github Pages wensite!</h1>
