Fixed website text

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         </style>
     </header>
     <body>
-        <h1>This is my Github Pages wensite!</h1>
+        <h1>This is my Github Pages website!</h1>
     </body>
 </html>
